--- a/android/assets/jsons/translations/Czech.properties
+++ b/android/assets/jsons/translations/Czech.properties
@@ -63,7 +63,7 @@ Declare war = Vyhlásit válku
 Declare war on [civName]? = Vyhlásit válku civilizaci [civName]?
 [civName] has declared war on us! = Civilizace [civName] nám vyhlásila válku!
 [leaderName] of [nation] = [leaderName], [nation]
-You'll pay for this! = Za tohle zaplatite!
+You'll pay for this! = Za tohle zaplatíte!
 Negotiate Peace = Vyjednat mír
 Peace with [civName]? = Mír s civilizací [civName]?
 Very well. = Výborně.
@@ -136,14 +136,12 @@ Provides 3 happiness at 30 Influence = Poskytuje 3 body spokojenosti při vlivu 
 Provides land units every 20 turns at 30 Influence = Poskytuje pozemní jednotky každých 20 kol při vlivu 30
 Gift [giftAmount] gold (+[influenceAmount] influence) = Daruj [giftAmount] zlata (+ [influenceAmount] vlivu)
 Relationship changes in another [turnsToRelationshipChange] turns = Mezinárodní vztahy se změní během příštích/ho [turnsToRelationshipChange] kol(a)
- # Requires translation!
-Protected by = 
- # Requires translation!
+ Protected by = Chráněno
 Revoke Protection = 
  # Requires translation!
 Pledge to protect = 
  # Requires translation!
-Declare Protection of [cityStateName]? = 
+Declare Protection of [cityStateName]? = Deklarovat Chránění [cityStateName]?
 
 Cultured = Kulturní
 Maritime = Námořní
@@ -207,8 +205,7 @@ Game Options = Nastavení hry
 Civilizations = Civilizace
 Map Type = Typ mapy
 Map file = Soubor mapy
- # Requires translation!
-Could not load map! = 
+Could not load map! = Mapa se nepodařila nahrát!
 Generated = Generováno
 Existing = Existující
 Custom = Vlastní
@@ -219,7 +216,7 @@ Perlin = Perlin
 Continents = Kontinenty 
 Archipelago = Souostroví
 Number of City-States = Počet městských států
-One City Challenge = Výzva - Jen jedno město
+One City Challenge = Výzva - jedno město
 No Barbarians = Bez barbarů
 No Ancient Ruins = Bez starobylých ruin
 No Natural Wonders = Bez Přírodních Divů
@@ -253,9 +250,7 @@ Small = Malý
 Medium = Střední
 Large = Velký
 Huge = Obrovský
- # Requires translation!
 World wrap requires a minimum width of 32 tiles = 
- # Requires translation!
 The provided map dimensions were too small = 
  # Requires translation!
 The provided map dimensions were too big = 
